testbed/google-microservices-demo/network-policies/adservice-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ad-allow-frontend
  namespace: 
spec:
  podSelector:
    matchLabels:
      app: adservice
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
      - port: 9555
---
