testbed/google-microservices-demo/network-policies/cartservice-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cart-allow-checkout
  namespace: 
spec:
  podSelector:
    matchLabels:
      app: cartservice
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: checkoutservice
    ports:
      - port: 7070
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cart-allow-frontend
  namespace: 
spec:
  podSelector:
    matchLabels:
      app: cartservice
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
      - port: 7070
---
