testbed/google-microservices-demo/network-policies/checkoutservice-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: checkout-allow-frontend
  namespace: 
spec:
  podSelector:
    matchLabels:
      app: checkoutservice
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
      - port: 5050
---
