testbed/google-microservices-demo/network-policies/currencyservice-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: currencyservice-allow-frontend
  namespace: 
spec:
  podSelector:
    matchLabels:
      app: currencyservice
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
      - port: 7000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: currencyservice-allow-checkout
  namespace: 
spec:
  podSelector:
    matchLabels:
      app: currencyservice
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: checkoutservice
    ports:
      - port: 7000
---
