testbed/google-microservices-demo/network-policies/emailservice-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: email-allow-checkout
  namespace: 
spec:
  podSelector:
    matchLabels:
      app: emailservice
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: checkoutservice
    ports:
      - port: 8080
---
