testbed/google-microservices-demo/network-policies/frontend-netpol.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-allow
  namespace: 
spec:
  podSelector:
    matchLabels:
      app: frontend
  ingress:
  - from:
    ports:
      - port: 80
      - port: 443
---
