testbed/google-microservices-demo/network-policies/paymentservice-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: payment-allow-checkout
  namespace: 
spec:
  podSelector:
    matchLabels:
      app: paymentservice
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: checkoutservice
    ports:
      - port: 50051
---
