testbed/google-microservices-demo/network-policies/recommendationservice-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: recommendationservice-allow-frontend
  namespace: 
spec:
  podSelector:
    matchLabels:
      app: recommendationservice
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
      - port: 8080
