testbed/google-microservices-demo/network-policies/redis-cart-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-cart-allow-cart
  namespace: 
spec:
  podSelector:
    matchLabels:
      app: redis-cart
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: cartservice
    ports:
      - port: 6379
---
